2009-04-28  Thien-Thi Nguyen  <ttn@gnuvola.org>  (tiny change)

	Fix typos.
	* doc/uniconv.texi (uniconv.h): Fix typo.
	* doc/unictype.texi (Properties): Fix typo.

2009-04-28  Bruno Haible  <bruno@clisp.org>

	Doc tweaks.
	* doc/libunistring.texi: Fix typo.
	* doc/unistr.texi (u*_cmp2): Clarify what memcmp2 is.
	* doc/uninorm.texi (u*_normxfrm): Fix description of return value.
	* doc/unicase.texi (u*_casexfrm): Likewise.
	Reported by Paolo Bonzini.

2009-04-26  Bruno Haible  <bruno@clisp.org>

	* Version 0.9 released.

2009-04-26  Bruno Haible  <bruno@clisp.org>

	* version.sh: Bump date.

2009-04-26  Bruno Haible  <bruno@clisp.org>

	* doc/libunistring.texi: Initialize 'am' index.
	(Using the library): New chapter.

2009-04-26  Bruno Haible  <bruno@clisp.org>

	* README.woe32: New file, from GNU gettext.
	* Makefile.am (EXTRA_DIST): Add it.

2009-04-26  Bruno Haible  <bruno@clisp.org>

	* doc/uniconv.texi: Update for changed calling conventions of
	u*_conv_from_encoding and u*_conv_to_encoding functions.

2009-04-24  Bruno Haible  <bruno@clisp.org>

	Make VPATH builds on Cygwin work.
	* lib/Makefile.am (AM_CPPFLAGS): Add the essential -I options.

2009-04-24  Bruno Haible  <bruno@clisp.org>

	* gnulib-m4/gnulib-cache.m4: Updated by gnulib-tool.

2009-04-24  Bruno Haible  <bruno@clisp.org>

	Make the installed package relocatable.
	* autogen.sh (GNULIB_MODULES): Add relocatable-lib-lgpl.
	* lib/Makefile.am (AM_CPPFLAGS): Add DEPENDS_ON_LIBICONV definition.

2009-04-23  Bruno Haible  <bruno@clisp.org>

	Fix recognition of "nm" command.
	* m4/libtool.m4 (LT_PATH_NM): Try "nm" program also when compiling for
	mingw in a cygwin environment.

2009-04-23  Bruno Haible  <bruno@clisp.org>

	* m4/libtool.m4: Fix recognition of 'link' command.
	2009-01-26  Peter Rosin  <peda@lysator.liu.se>
		Don't settle for any dumpbin/link program as name lister.
		* m4/libtool.m4 (LT_PATH_NM): When locating dumpbin or
		link -dump, check if they appear to really be capable of name